<?xml version="1.0"?>
<package>
    <name>adlink_ddsbot</name>
    <version>0.0.0</version>
    <description>The adlink_ddsbot package</description>
    <maintainer email="adlinkros@todo.todo">adlinkros</maintainer>
    <license>Apache 2.0</license>
    <!-- <url type="website">http://wiki.ros.org/adlink_ddsbot</url> -->

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>move_base</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>move_base</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>message_runtime</run_depend>
    <export>
        <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
    </export>
</package>
